[package]
name = "nexers"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
bitflags = "1"
byteorder = "1"
cast = "0.2"
cesu8 = "1"
failure = "0.1"
hex = "0.3"
insideout = "0.2"
lru = "0.1"
maplit = "1"

[dev-dependencies]
crossbeam-channel = "0.3"
jemallocator = "0.1"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

[profile.release]
lto = true
