[package]
name = "nexers"
version = "0.1.5"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2021"

description = "Parses Maven/Nexus repository index files"
license = "MIT OR Apache-2.0"
categories = [
    "parser-implementations",
]
readme = "README.md"
repository = "https://github.com/FauxFaux/nexers"
include = ["README.md", "LICENSE", "src/", "examples/", "schema.sql"]

[features]
default = ["db"]

# jemallocator: use the allocator (e.g. in examples), 30% speedup

# enable the database writing code
db = ["rusqlite"]

[dependencies]
anyhow = "1"
bitflags = "2"
byteorder = "1"
cesu8 = "1"
hex = "0.4"
insideout = "0.2"

[dependencies.rusqlite]
features = ["bundled"]
optional = true
version = "0.30"

[dependencies.jemallocator]
optional = true
version = "0.5"

[[example]]
name = "sqlite_search"
required-features = ["db"]

[[example]]
name = "build_db"
required-features = ["db"]

[profile.release]
lto = true
