[package]
name = "nexers"
version = "0.1.6"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2021"

description = "Parses Maven/Nexus repository index files"
license = "MIT OR Apache-2.0"
categories = [
    "parser-implementations",
]
readme = "README.md"
repository = "https://github.com/FauxFaux/nexers"
include = ["README.md", "LICENSE", "src/", "examples/", "schema.sql"]

[features]
default = ["db"]

# enable the database writing code
db = ["rusqlite"]

[dependencies]
anyhow = "1"
bitflags = "2"
byteorder = "1"
cesu8 = "1"
compact_str = "0.8.0-beta"
hex = "0.4"
insideout = "0.2"

[dependencies.rusqlite]
features = ["bundled"]
optional = true
version = "0.30"

[[example]]
name = "sqlite_search"
required-features = ["db"]

[[example]]
name = "build_db"
required-features = ["db"]

[profile.release]
lto = true
